--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mapmap</title>
+  <title>My Recipes</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render 'layouts/navigation' %>
+  <div class="container">
+    <%= render 'layouts/messages' %>
+    <%= yield %>
+  <%= render 'layouts/footer' %>
+  </div>
 </body>
 </html>
